--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
   google_fonts: ^3.0.1
+  lottie: ^1.4.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
